# WGPUFluidSimulation

./: Cargo.toml  readme.md
src/: compute_shader.wgsl  main.rs  shader.wgsl  shader_test.wgsl
