[package]
name = "WGPUFluidSim"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }

crossbeam = "0.8.4"
crossbeam-channel = {version = "0.5.12", features = ["default"]}
rand = "0.8.5"